--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,9 @@
-@import './common';
+@import './components/common';
+@import './components/header-hero';
+@import './components/pruducts';
+@import './components/made';
+@import './components/owners';
+@import './components/comments';
+@import './components/footer';
+@import './components/burger';
 
