--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,1 +1,37 @@
-<h1>Hi</h1>
+<section>
+    <div class="container-how">
+        <p class="p-how">tradition and love</p>
+        <p class="p-name">how it’s made?</p>
+        <div class="container-made">
+         <img src="/src/imgs/cow.png" alt="">
+                <p class="p-made">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+            <ul class="ul-milk">
+            <li class="li-milk">
+                <p class="p-made-2">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.                </p>
+            </li>
+            <li class="li-milk">
+                <p class="p-made-2-s">Aliquam erat volutpat. Aenean accumsan.</p>
+                <button class="button-made">Read more<i class="fa-solid fa-chevron-right"></i></button>
+            </li>
+            <img src="/src/imgs/milk.png" class="img-milk" alt="" >
+         </ul>
+        </div>
+        <div class="container-made-2">
+         <ul class="ul-how">
+            <img src="/src/imgs/icon-milk.png" alt="">
+            <li><p class="p-how-2">721</p></li>
+            <li><p class="p-hows">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p></li>
+         </ul>
+         <ul class="ul-how">
+            <img src="/src/imgs/icon-milk2.png" alt="">
+            <li><p class="p-how-2">16kg</p></li>
+            <li><p class="p-hows">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p></li>
+         </ul>
+         <ul class="ul-how">
+            <img src="/src/imgs/icon-milk3.png" alt="">
+            <li><p class="p-how-2">84</p></li>
+            <li><p class="p-hows">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p></li>
+         </ul>
+        </div>
+    </div>
+   </section>
