--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -3,17 +3,20 @@
         <p class="p-how">tradition and love</p>
         <p class="p-name">how it’s made?</p>
         <div class="container-made">
-         <img src="/src/imgs/cow.png" alt="">
-                <p class="p-made">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+         <img src="/src/imgs/cow.png" alt="" class="img-cow">
             <ul class="ul-milk">
-            <li class="li-milk">
+                <li class="li-milk">
+                <p class="p-made">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+            </li>
+            <div class="back-milk">
+                <li class="li-milk">
                 <p class="p-made-2">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.                </p>
             </li>
             <li class="li-milk">
                 <p class="p-made-2-s">Aliquam erat volutpat. Aenean accumsan.</p>
                 <button class="button-made">Read more<i class="fa-solid fa-chevron-right"></i></button>
             </li>
-            <img src="/src/imgs/milk.png" class="img-milk" alt="" >
+        </div>
          </ul>
         </div>
         <div class="container-made-2">
