--- a/src/sass/components/_made.scss
+++ b/src/sass/components/_made.scss
@@ -43,6 +43,7 @@ li {
     font-weight: 600;
     margin-top: 50px;
     margin-bottom: 35px;
+    z-index: 3;
 }
 .p-made-2 {
     width: 68vw;
@@ -50,6 +51,7 @@ li {
     color: #907E82;
     font-size: 12px;
     font-weight: 600;
+    z-index: 3;
 }
 .p-made-2-s {
     width: 68vw;
@@ -58,12 +60,14 @@ li {
     font-size: 12px;
     font-weight: 600;
     margin-top: 15px;
+    z-index: 3;
 }
 .ul-milk {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100vw;
 }
 .li-milk {
     width: 68vw;
@@ -71,6 +75,7 @@ li {
 .img-milk {
     position: absolute;
     margin-bottom: 40px;
+    width: 100vw;
 }
 .container-button-milk {
     width: 80vw;
@@ -78,7 +83,7 @@ li {
 .button-made {
     width: 176px;
     height: 44px;
-    color: #FFFFFF;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -91,12 +96,17 @@ li {
     font-weight: 800;
     font-size: 14px;
     margin-top: 20px;
+    transition: background-color 0.3s ease;
+}
+.button-made:hover {
+    background-color: #f2f2f2;
 }
 .container-made-2 {
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100vw;
 }
 .p-how-2 {
     font-family: "Titan One", sans-serif;
@@ -112,4 +122,116 @@ li {
 }
 .ul-how {
     margin-top: 40px;
+}
+.back-milk {
+    background: url(/src/imgs/milk.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-size: cover;
+}
+@media (min-width: 480px) {
+    .p-how {
+        font-size: 22px;
+        margin-bottom: 0;
+    }
+    .p-name {
+        font-size: 38px;
+    }
+    .p-made {
+        font-size: 16px;
+    }
+    .p-made-2 {
+        font-size: 16px;
+    }
+    .p-made-2-s {
+        font-size: 16px;
+    }
+    .button-made {
+        width: 206px;
+        height: 48px;
+        font-size: 16px;
+    }
+    .p-hows {
+        font-size: 14px;
+        width: 350px;
+    }
+}
+@media (min-width:540px) {
+    .container-made-2 {
+        padding: 70px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100vw;
+    }
+    .back-milk {
+        background: none;
+    }
+    .img-cow {
+        width: 340px;
+        height: 339px;
+    }
+}
+@media (min-width:786px) {
+    .p-how {
+        font-size: 26px;
+    }
+    .p-name {
+        font-size: 48px;
+        width: auto;
+    }
+    .container-made {
+        flex-direction: row;
+        margin: 0;
+        justify-content: space-between;
+        width: 100vw;
+        padding: 40px;
+    }
+    .img-cow {
+        content: url(/src/imgs/cow-tablet.png);
+        width: 340px;
+        height: 340px;
+        margin-bottom: 50px;
+    }
+    .p-made {
+        width: 340px;
+    }
+    .p-made-2 {
+        width: 340px;
+    }
+    .p-made-2-s {
+        width: 340px;
+    }
+    .back-milk {
+        width: auto;
+    }
+    .ul-milk {
+        width: auto;
+    }
+    .li-milk {
+        width: 340px;
+    }
+    .button-made {
+        width: 176px;
+        height: 44px;
+        padding-left: 30px;
+        padding-right: 30px;
+        font-size: 16px;
+        margin-top: 40px;
+    }
+    .container-made-2 {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .p-hows {
+        width: 180px;
+    }
+    .p-how-2 {
+        font-size: 48px;
+        margin-top: 30px;
+    }
 }
