--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,34 @@
-<h1>Hi</h1>
+<footer class="footer">
+    <section class="section-footer">
+      <div class="footer-div">
+        <ul class="ul-footer">
+          <li class="footer-items">
+            <h3 class="h3-footer">homemade ice cream<br>made </h3>
+            <h2 class="h2-footer">with<br>passion</h2>
+            <h3 class="h3-footer-comp">homemade ice cream made </h3>
+            <h2 class="h2-footer-comp">with passion</h2>
+          </li>
+          <li class="footer-items">
+            <div class="div-footer-svg">
+              <svg class="svg-footer git-footer">
+                <use href="./imgs/symbol-defs.svg#icon-github"></use>
+              </svg>
+              <svg class="svg-footer telega-footer">
+                <use href="./imgs/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+              <svg class="svg-footer facebook-footer">
+                <use href="./imgs/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </div>
+            <p class="p-footer-number">Feel free to contact <span class="numbers-footer">+61 (0) 383 766 284</span></p>
+          </li>
+        </ul>
+    </section>
+    <div class="div-line-footer"></div>
+    <p class="p-copyright-footer">© 2019 - IceCream.<br>
+      All Rights Reserved. </p>
+  </div>
+  <p class="p-copyright-footer-second">© 2019 - IceCream.
+    All Rights Reserved. </p>
+</div>
+</footer>
