--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,1 +1,67 @@
-<h1>Hi</h1>
+<section class="section-slider"></section>
+          <section class="section-cards">
+           <div class="div-section-cards">
+            <ul class="ul-cargs">
+                <li class="cards-items first-card">
+                  <h3 class="h3-cards cafe-cards">CAFE</h3>
+                  <p class="country-cards">Chicago</p>
+                  <p class="lorem-cards">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                  <p class="lorem-cards-comp">Fusce ut velit laoreet, tempus<br> arcu molestie vulputate</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="day1-cards">Monday - Friday</p>
+                  <p class="time1-cards">06:00 AM - 10:00 PM</p>
+                  <p class="day2-cards">Saturday - Sunday</p>
+                  <p class="time2-cards">08:00 AM - 16:00 PM</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="number-cards">+61(0) 383 766 284 noreply@<br>envato.com</p>
+                  <p class="number-cards-tablet">+61(0) 383 766 284<br> noreply@envato.com</p>
+                </li>
+                <li class="cards-items second-card">
+                  <h3 class="h3-cards foodtruck-cards">FOOD TRUCK</h3>
+                  <p class="country-cards">Los Angeles</p>
+                  <p class="lorem-cards">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                  <p class="lorem-cards-comp">Fusce ut velit laoreet, tempus<br> arcu molestie vulputate</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="day1-cards">Monday - Friday</p>
+                  <p class="time1-cards">06:00 AM - 10:00 PM</p>
+                  <p class="day2-cards">Saturday - Sunday</p>
+                  <p class="time2-cards">08:00 AM - 16:00 PM</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="number-cards">+61(0) 383 766 284 noreply@<br>envato.com</p>
+                  <p class="number-cards-tablet">+61(0) 383 766 284<br> noreply@envato.com</p>
+                </li>
+                <li class="cards-items third-card">
+                  <h3 class="h3-cards cafe-cards">CAFE</h3>
+                  <p class="country-cards">New York</p>
+                  <p class="lorem-cards">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                  <p class="lorem-cards-comp">Fusce ut velit laoreet, tempus<br> arcu molestie vulputate</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="day1-cards">Monday - Friday</p>
+                  <p class="time1-cards">06:00 AM - 10:00 PM</p>
+                  <p class="day2-cards">Saturday - Sunday</p>
+                  <p class="time2-cards">08:00 AM - 16:00 PM</p>
+                  <img src="./imgs/line-cards.webp" alt="" class="img-line-cards">
+                  <p class="number-cards">+61(0) 383 766 284 noreply@<br>envato.com</p>
+                  <p class="number-cards-tablet">+61(0) 383 766 284<br> noreply@envato.com</p>
+                </li>
+            </ul>
+            <ul class="ul-cards-links">
+              <li class="cards-links-button">
+                <div class="div-vector-div our-loc-cards">
+                <a href="" class="button-cards loc-cards">Our Locations</a>
+                <svg class="svg-svg-cards">
+                  <use href="./imgs/symbol-defs.svg#icon-vector"></use>
+                </svg>
+                </div>
+              </li>
+              <li class="cards-links-button">
+                <div class="div-vector-div franchise-cards">
+                <a href="" class="button-cards fran-cards-a">Franchise</a>
+                <svg class="svg-svg-cards svg-second-card">
+                  <use href="./imgs/symbol-defs.svg#icon-vectorred"></use>
+                </svg>
+                </div>
+              </li>
+            </ul>
+           </div>
+          </section>
