--- a/src/sass/components/_made.scss
+++ b/src/sass/components/_made.scss
@@ -133,6 +133,9 @@ li {
     flex-direction: column;
     background-size: cover;
 }
+.container-made {
+    background: transparent;
+}
 @media (min-width: 480px) {
     .p-how {
         font-size: 22px;
@@ -233,5 +236,46 @@ li {
     .p-how-2 {
         font-size: 48px;
         margin-top: 30px;
+    }
+}
+@media (min-width:1280px) {
+    .p-name {
+        font-size: 58px;
+    }
+    .p-how {
+        font-size: 30px;
+    }
+    .container-made {
+        background: url(/src/imgs/milk-dekstop.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .img-cow {
+        content: url(/src/imgs/cow-dekstop.png);
+        width: 516px;
+        height: 516px;
+        margin: 0;
+    }
+    .p-made, .p-made-2, .p-made-2-s {
+        width: 463px;
+        line-height: 2;
+    }
+    .ul-milk {
+        width: 463px;
+    }
+    .li-milk {
+        width: 463px;
+    }
+    .p-how-2 {
+        font-size: 58px;
+        margin-bottom: 0;
+    }
+    .p-hows {
+        font-size: 16px;
+        width: auto;
+        line-height: 2;
+    }
+    .ul-how {
+        width: 330px;
     }
 }
