--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -1,1 +1,6 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
