--- a/src/sass/components/_made.scss
+++ b/src/sass/components/_made.scss
@@ -13,6 +13,7 @@ li {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 98px;
 }
 .container-made {
     display: flex;
@@ -26,6 +27,7 @@ li {
     font-family: "Titan One", sans-serif;
     text-transform: uppercase;
     font-size: 18px;
+    margin-top: 150px;
 }
 .p-name {
     color: #D41443;
