--- a/src/sass/components/_pruducts.scss
+++ b/src/sass/components/_pruducts.scss
@@ -260,6 +260,7 @@
         width: 40px;
         height: 40px;
         margin-top: 62px;
+        margin-left: 0;
     }
     .li-icecream-product {
         width: 330px;
