--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,1 +1,54 @@
-<h1>Header</h1>
+
+
+<header class="header">
+  <div class="header_container">
+    <div class="header_div">
+      <img src="./imgs/logo1.png" alt="" class="header_logo" />
+      <ul class="header_list">
+        <li class="header_item">
+          <a href="#"><p class="header_item_text mam">Home</p></a>
+        </li>
+        <li class="header_item">
+          <a href="#"><p class="header_item_text">About us</p></a>
+        </li>
+        <li class="header_item">
+          <a href="#"><p class="header_item_text">How it’s made?</p></a>
+        </li>
+        <li class="header_item">
+          <a href="#"><p class="header_item_text">Our products</p></a>
+        </li>
+        <li class="header_item">
+          <a href="#"><p class="header_item_text mama">Contact</p></a>
+        </li>
+      </ul>
+      <img src="./imgs/Burger.png" alt="" class="Burger_menu">
+
+      <button class="header_buy_menu">
+        Buy now <img src="./imgs/Vector1.png" alt="" />
+      </button>
+    </div>
+  </div>
+  <div class="header_container">
+    <div class="header_main_div">
+      <h2 class="header_main_title">
+        ICE CREAM MADE WITH <span class="header_main_title_span"> PASSION</span>
+      </h2>
+      <button class="header_main_button mamama">Products</button>
+      <button class="header_main_button">How it’s made?</button>
+      <p class="header_main_text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
+      </p>
+      <img src="./imgs/arrow-right3.png" alt="" class="header_main_img7" />
+      <img src="./imgs/Ellipse3.png" alt="" class="header_main_img8" />
+
+      <img src="./imgs/slider-pic51.png" alt="" class="header_main_img3" />
+
+      <img src="./imgs/slider-pic71.png" alt="" class="header_main_img2" />
+
+      <img src="./imgs/slider-pic41.png" alt="" class="header_main_img4" />
+      <img src="./imgs/Group23.png" alt="" class="header_main_img5" />
+      <img src="./imgs/Group22.png" alt="" class="header_main_img6" />
+    </div>
+  </div>
+</header>
