--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,7 @@
 
 
 <header class="header">
+  <section>
   <div class="header_container">
     <div class="header_div">
       <img src="./imgs/logo1.png" alt="" class="header_logo" />
@@ -28,6 +29,8 @@
       </button>
     </div>
   </div>
+</section>
+<section>
   <div class="header_container">
     <div class="header_main_div">
       <h2 class="header_main_title">
@@ -51,4 +54,5 @@
       <img src="./imgs/Group22.png" alt="" class="header_main_img6" />
     </div>
   </div>
+</section>
 </header>
