--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,5 +1,8 @@
 .header_container {
   width: 1200px;
+  margin: 0 auto;
+  padding: 0px 15px;
+  position: relative;
 }
 
 
@@ -31,7 +34,7 @@
   padding-top: 37px;
   display: flex;
   flex-direction: row;
-  width: 1200px;
+  width: 1170px;
   display: flex;
 }
 .header {
@@ -64,18 +67,19 @@
 }
 
 .header_main_div {
-  height: 665px;
+  height: 557px;
   background-color: pink;
 }
 
 .header_main_title {
   font-family: Titan One;
-  padding-top: 90px;
+  padding-top: 60px;
   font-size: 38px;
   color: #ffffff;
   letter-spacing: 0.04em;
   width: 250px;
   margin-left: 115px;
+  margin-top: 0px;
 }
 
 .header_main_title_span {
@@ -104,19 +108,19 @@
 .header_main_img3 {
 
   position: relative;
-  bottom: 22px;
+  bottom: 100px;
   margin-left: 77px;
 }
 
 .header_main_img2 {
   position: absolute;
-  top: 100px;
-  left: 560px;
+  top: 0px;
+  left: 590px;
 }
 
 .header_main_img8 {
-  top: 57px;
-  left: 460px;
+  top: -55px;
+  left: 465px;
   position: absolute;
   z-index: 0;
 }
@@ -131,7 +135,7 @@
 .header_main_img6 {
   position: absolute;
   left: 90.5%;
-  top: 120px;
+  top: 50px;
 }
 
 .Burger_menu {
@@ -141,30 +145,31 @@
 .header_main_img5 {
   position: absolute;
   left: 89%;
-  top: 200px;
+  top: 140px;
 }
 
 .header_main_img4 {
   position: relative;
-  top: 18px;
+  top: -53px;
   left: 48%;
 }
 
 .header_main_text {
   position: relative;
   left: 25%;
-  top: 140px;
+  top: 80px;
 }
 
 .header_main_img7 {
   position: relative;
   left: 25%;
-  bottom: 44px;
+  bottom: 115px;
 }
 
 @media screen and (max-width:1199px){
   .header_container {
-    width: 768px;
+    width: 738px;
+    position: static;
   }
 
   .header_buy_menu {
@@ -178,7 +183,7 @@
 .header_main_div {
   height: 312px;
   background-color: pink;
-  width: 768px;
+  width: 738px;
 }
 
 .header_item_text {
@@ -247,7 +252,7 @@
     padding-top: 37px;
     display: flex;
     flex-direction: row;
-    width: 768px;
+    width: 738px;
     display: flex;
 }
 
@@ -299,14 +304,14 @@
 .header_main_img7 {
     margin-left: -15px;
     width: 18px;
-    bottom: 38px;
+    bottom: 30px;
     left: 21%;
 }
 
 .header_main_img3 {
-    padding-left: 34px;
     margin: 0px;
-    width: 158px;
+    width: 124px;
+    bottom: 20px;
 }
 
 
@@ -317,6 +322,7 @@
 
 .header_main_img5 {
   width: 51px;
+  top: 190px;
 }
 }
 
