--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -4,7 +4,9 @@
   <section>
   <div class="header_container">
     <div class="header_div">
+      <a href="#">
       <img src="./imgs/logo1.png" alt="" class="header_logo" />
+      </a>
       <ul class="header_list">
         <li class="header_item">
           <a href="#"><p class="header_item_text mam">Home</p></a>
@@ -48,6 +50,7 @@
       <img src="./imgs/slider-pic51.png" alt="" class="header_main_img3" />
 
       <img src="./imgs/slider-pic71.png" alt="" class="header_main_img2" />
+      <img src="./imgs/Group24.png" alt="" class="header_main_img9">
 
       <img src="./imgs/slider-pic41.png" alt="" class="header_main_img4" />
       <img src="./imgs/Group23.png" alt="" class="header_main_img5" />
