--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -9,6 +9,11 @@
 
 /* header */
 
+
+.header_main_img9 {
+  display: none;
+}
+
 .header_item_text {
 
   color: white;
@@ -102,7 +107,14 @@
 }
 
 .mamama {
+  color: white;
+  background-color: red;
   margin-left: 115px;
+}
+
+.mamama:hover {
+  color: red;
+  background-color: white;
 }
 
 .header_main_img3 {
@@ -171,6 +183,10 @@
     width: 738px;
     position: static;
   }
+
+  .header_main_img9 {
+  display: none;
+}
 
   .header_buy_menu {
     border: 0px;
@@ -334,6 +350,63 @@
 
 
 
+
+.header_main_img2 {
+  z-index: 1;
+  width: 171px;
+  height: 410px;
+}
+
+.header_main_img9 {
+  width: 280px;
+  height: 344px;
+  display: block;
+  position: absolute;
+  left: 12.5%;
+  top: 80px;
+  z-index: 0;
+}
+
+.header_main_img8 {
+  display: none;
+}
+
+.header_main_text {
+  display: none;
+}
+
+.header_main_img7 {
+  display: none;
+}
+
+.header_main_img3 {
+  display: none;
+}
+
+.header_main_img6 {
+  display: none;
+}
+
+.header_main_img5 {
+  display: none;
+}
+
+.header_main_img4 {
+  display: none;
+}
+
+.header_buy_menu {
+  display: none;
+}
+
+.header_main_div {
+  width: 290px;
+}
+
+.header_container {
+  width: 290px;
+} 
+
 .header_main_button {
     position: relative;
     height: 24px;
@@ -348,8 +421,14 @@
 }
 
 .mamama {
-    margin-left: 20px;
+    color: white;
+    margin-left: 0;
     width: 64px;
+}
+
+.mamama:hover {
+  color: red;
+  background-color: white;
 }
 
 .header {
@@ -376,22 +455,26 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 200px;
+    padding-top: 0;
 }
 
 .Burger_menu {
     padding-left: 61px;
     padding-top: 10px;
+    margin-right: 30px;
 }
 
 .header_logo {
-    padding-left: 20px;
+    padding-left: 1px;
     padding-top: 7px;
+    margin-right: 10px;
 }
 
 .header_main_title {
     position: relative;
-    padding-left: 20px;
-    width: 162px;
+    padding-left: 0;
+    width: 212px;
     font-size: 26px;
     font-family: 'Titan One';
     color: #FFFFFF;
