--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -24,7 +24,7 @@
           <a href="#"><p class="header_item_text mama">Contact</p></a>
         </li>
       </ul>
-      <img src="./imgs/Burger.png" alt="" class="Burger_menu">
+      <img src="./imgs/Burger.png" alt="" class="Burger_menu" id="openMenu">
 
       <button class="header_buy_menu">
         Buy now <img src="./imgs/Vector1.png" alt="" />
