--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,6 +20,23 @@
                 <use href="./imgs/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </div>
+            <!--<ul class="div-footer-svg">
+              <li class="li-footer-li">
+                 <svg class="svg-footer ggg">
+                  <use href="./imgs/symbol-defs.svg#icon-gitgit"></use>
+                 </svg>
+              </li>
+              <li class="li-footer-li">
+                <svg class="svg-footer tgtgtg">
+                  <use href="./imgs/symbol-defs.svg#icon-tgtg"></use>
+                 </svg>
+              </li>
+              <li class="li-footer-li">
+                <svg class="svg-footer fcfcfc">
+                  <use href="./imgs/symbol-defs.svg#icon-faceface"></use>
+                 </svg>
+              </li>
+            </ul>-->
             <p class="p-footer-number">Feel free to contact <span class="numbers-footer">+61 (0) 383 766 284</span></p>
           </li>
         </ul>
