--- a/src/sass/components/_comments.scss
+++ b/src/sass/components/_comments.scss
@@ -3,6 +3,19 @@
     padding: 0 15px;
     margin: 0 auto;
 }
+/*.div-footer-svg {
+    display: flex;
+}
+.svg-footer {
+    width: 20px;
+    height: 20px;
+}
+.li-footer-li {
+    background-color: #FFA5BA;
+    border-radius: 30px;
+    width: 34px;
+    height: 34px;
+}*/
 .section-cards {
     background-color: #FFF5F6;
     height: 1290px;
